2010-11-25  Romain Francois <romain@r-enthusiasts.com>

    * inst/include/Rcpp/module/Module_generated_function.h: new .function with
    formal argument specification
    
    * inst/include/Rcpp/module/Module_generated_CppFunction.h: helper classes
    for the above
    
    * R/Module.R: using the formal argument specification if available
    
    * R/populate.R: new R function populate to dump the contents of a module
    into an environment or a namespace
    
    * man/populate.Rd: documentation for populate
    
2010-11-24  Romain Francois <romain@r-enthusiasts.com>

    * R/00_classes.R: formals<- method for C++Function that allows to set default 
    arguments, etc .. to a C++ function

2010-11-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Makefile: Call Rscript with --vanilla to skip user settings

2010-11-23  Romain Francois <romain@r-enthusiasts.com>

	* R/00_classes.R: C++Class gains a docstring slot to host self
	documentation

	* R/Module.R: calling an exposed C++ more efficiently by using the xp
	directly rather than traversing the map internally

	* R/00_classes.R: C++Function gains a docstring slot to host self
	documentation of the internal function. And a "signature" slot to
	host the C++ signature of the function

	* R/01_show.R: updated show( C++Function ) to display the docstring
	and the signature. updated show( C++Class ) to display the docstring.

	* inst/include/Rcpp/module/Module_generated_CppFunction.h: self
	documentation for exposed C++ functions and extraction of the
	signature

	* inst/include/Rcpp/module/Module_generated_function.h: idem

2010-11-22  Romain Francois <romain@r-enthusiasts.com>

	* R/00_classes.R: C++OverloadedMethods gains an "info" class methods,
	factored out from Module.R

	* R/01_show.R: more information printed in show( C++Class )

	* inst/include/Rcpp/Module/Module_generated_get_signature.h:
	templates to grab method signatures

	* inst/include/Rcpp/Module.h: CppMethod gains a signature method that